# website

./: Cargo.toml  README.md  firebase.json  index.html  main.js  manifest.json  styles.css  sw.js
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
assets/: main.css  manifest.json
public/: index.html  main.js  manifest.json  styles.css
public/assets/: mike-czyz-public.asc  mike-czyz-public.gpg
src/: main.rs  router.rs
src/components/: navbar.rs
src/pages/: about.rs  certifications.rs  contact.rs  education.rs  home.rs  mod.rs  notfound.rs  projects.rs
